--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Texas State Sales Tax 2025: Rates, Rules & Simple Guide</title>
+  <title>MATT IS GAY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Basic SEO -->
