--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MATT IS GAY</title>
+  <title>Texas State Sales Tax 2025: Rates, Rules & Simple Guide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Basic SEO -->
@@ -129,8 +129,8 @@
 <body>
   <header>
     <div class="pill">2025 Guide</div>
-    <h1>Texas State Sales Tax 2025: Rates, Rules & Simple Guide</h1>
-    <p>Understand Texas state and local sales tax in plain English — current rates, examples, exemptions, and online seller rules.</p>
+    <h1>Matt is Gay</h1>
+    <p>He Likes Men.</p>
   </header>
 
   <main>
