--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
   <main>
     <section>
       <p>
-        Texas sales tax can feel confusing when you’re trying to figure out how much to charge customers or what you’ll actually pay at the register.
-        This page breaks the rules down into simple pieces, with examples you can copy and adapt.
+        Matt is gay and we all know it.
       </p>
 
       <div class="toc">
@@ -154,282 +153,11 @@
         </ul>
       </div>
     </section>
-
-    <section id="overview">
-      <h2>1. Quick overview</h2>
-      <p>
-        Texas charges a statewide sales and use tax on most retail sales of goods and many services.
-        On top of that, cities, counties, transit authorities, and special-purpose districts can add local sales tax.
-      </p>
-
-      <ul>
-        <li><strong>State sales tax rate:</strong> <strong>6.25%</strong></li>
-        <li><strong>Local sales tax:</strong> up to an additional <strong>2.00%</strong> total</li>
-        <li><strong>Maximum combined rate:</strong> <strong>8.25%</strong> (state + all local)</li>
-      </ul>
-
-      <p>
-        That means every taxable purchase in Texas will have:
-      </p>
-      <ul>
-        <li><strong>at least</strong> 6.25% tax, and</li>
-        <li><strong>at most</strong> 8.25% tax, depending on where the sale is sourced.</li>
-      </ul>
-
-      <div class="note">
-        <strong>Important:</strong> Some items (like most groceries and prescription medicines) are exempt from Texas state sales tax.
-        Not everything you buy will be taxed, and some categories have special rules.
-      </div>
-    </section>
-
-    <section id="current-rates">
-      <h2>2. Current Texas sales tax rates (2025)</h2>
-
-      <h3>2.1 State rate</h3>
-      <p>
-        The statewide Texas sales and use tax rate is <strong>6.25%</strong>. This has been the base state rate for many years.
-      </p>
-
-      <h3>2.2 Local rates and combined range</h3>
-      <p>
-        Local jurisdictions in Texas (cities, counties, special-purpose districts, and transit authorities) can each add their own sales and use tax,
-        up to a combined local cap of <strong>2.00%</strong>.
-      </p>
-      <p>
-        That means the <strong>combined state + local rate</strong across Texas ranges roughly from:
-      </p>
-      <ul>
-        <li><strong>6.25%</strong> (state only, no local tax)</li>
-        <li>up to <strong>8.25%</strong> (6.25% state + 2.00% local)</li>
-      </ul>
-
-      <h3>2.3 Example combined rates</h3>
-      <p>Here are typical combined rates you’ll see in many Texas locations:</p>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Location (example)</th>
-            <th>State</th>
-            <th>Local</th>
-            <th>Total sales tax</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Small town with no local tax</td>
-            <td>6.25%</td>
-            <td>0.00%</td>
-            <td><strong>6.25%</strong></td>
-          </tr>
-          <tr>
-            <td>City with 1.00% city + 1.00% county</td>
-            <td>6.25%</td>
-            <td>2.00%</td>
-            <td><strong>8.25%</strong></td>
-          </tr>
-          <tr>
-            <td>City with 1.50% mixed local</td>
-            <td>6.25%</td>
-            <td>1.50%</td>
-            <td><strong>7.75%</strong></td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <section id="calculate">
-      <h2>3. How to calculate Texas sales tax (with examples)</h2>
-
-      <h3>3.1 Basic formula</h3>
-      <p>
-        The basic formula for calculating Texas sales tax on a purchase is:
-      </p>
-      <p>
-        <code>Sales tax = Item price × Tax rate</code>
-      </p>
-      <p>
-        The tax rate you use is the combined state + local rate for where the sale is sourced (usually where the buyer takes possession).
-      </p>
-
-      <h3>3.2 Example: 8.25% total rate</h3>
-      <p><strong>Scenario:</strong> You buy a taxable item for $100 in a location with an 8.25% combined rate.</p>
-      <ul>
-        <li>Item price: $100.00</li>
-        <li>Tax rate: 8.25% = 0.0825</li>
-      </ul>
-      <p>
-        <code>Sales tax = 100 × 0.0825 = 8.25</code>
-      </p>
-      <p><strong>Total you pay: $108.25</strong></p>
-
-      <h3>3.3 Example: 6.25% state-only rate</h3>
-      <p><strong>Scenario:</strong> You buy a taxable item for $50 in an area with no local tax.</p>
-      <ul>
-        <li>Item price: $50.00</li>
-        <li>Tax rate: 6.25% = 0.0625</li>
-      </ul>
-      <p>
-        <code>Sales tax = 50 × 0.0625 = 3.125 → $3.13 (rounded)</code>
-      </p>
-      <p><strong>Total you pay: $53.13</strong></p>
-
-      <h3>3.4 Quick mental math tips</h3>
-      <ul>
-        <li>At <strong>8.25%</strong>, tax is a bit less than <strong>an extra 1/12</strong> of the price.</li>
-        <li>At <strong>6.25%</strong>, tax is a bit more than <strong>1/16</strong> of the price.</li>
-      </ul>
-    </section>
-
-    <section id="local">
-      <h2>4. State vs local tax & the 8.25% maximum rule</h2>
-
-      <h3>4.1 State tax (6.25%)</h3>
-      <p>
-        The 6.25% state sales and use tax applies to most taxable transactions in Texas. This portion goes to the state government.
-      </p>
-
-      <h3>4.2 Local tax (up to 2.00%)</h3>
-      <p>
-        Local jurisdictions can add their own sales and use tax, up to a combined local cap of 2%. That 2% can be made up of:
-      </p>
-      <ul>
-        <li>City sales tax</li>
-        <li>County sales tax</li>
-        <li>Transit authority tax</li>
-        <li>Special-purpose district taxes</li>
-      </ul>
-
-      <h3>4.3 Maximum total of 8.25%</h3>
-      <p>
-        No matter how many local jurisdictions apply, the combined rate (state + all local) for sales and use tax on a given transaction cannot exceed <strong>8.25%</strong>.
-      </p>
-
-      <div class="note">
-        <strong>Example:</strong> If a city already has 2.00% in local sales tax, a new special-purpose district cannot add another 0.25% on top of that for local sales tax on general goods in that area, because it would exceed the 8.25% combined cap.
-      </div>
-    </section>
-
-    <section id="exemptions">
-      <h2>5. Common exemptions & special cases</h2>
-
-      <h3>5.1 Items often exempt from Texas sales tax</h3>
-      <p>
-        Texas exempts certain categories from sales tax. Some of the more common ones include:
-      </p>
-      <ul>
-        <li>Most <strong>groceries</strong> and unprepared food</li>
-        <li><strong>Prescription</strong> medicines</li>
-        <li>Many <strong>over-the-counter medicines</strong></li>
-        <li>Certain <strong>medical devices</strong> and supplies</li>
-        <li>Some purchases by qualifying nonprofits or government entities</li>
-      </ul>
-      <p>
-        Details can be technical, so businesses usually check the Texas Comptroller’s guidance or consult a tax professional before assuming an item is exempt.
-      </p>
-
-      <h3>5.2 Motor vehicles & boats</h3>
-      <p>
-        Motor vehicles and boats are handled under special Texas rules; they’re generally taxed at the state rate (6.25%) with separate registration and titling processes.
-        Local add-ons work differently than with ordinary retail sales, and there can be separate fees.
-      </p>
-
-      <h3>5.3 Occasional sales & resale</h3>
-      <ul>
-        <li><strong>Resale:</strong> If you buy items strictly to resell them and you hold a valid Texas sales tax permit, you usually give your supplier a resale certificate and do not pay tax at the time of purchase. You then collect tax when you sell to your customer.</li>
-        <li><strong>Occasional sales:</strong> One-off or casual sales between individuals sometimes fall under “occasional sale” rules; these can be exempt if the legal requirements are met.</li>
-      </ul>
-    </section>
-
-    <section id="online">
-      <h2>6. Online & out-of-state sellers</h2>
-
-      <h3>6.1 Economic nexus threshold</h3>
-      <p>
-        Texas, like many states, has an “economic nexus” rule for remote (out-of-state) sellers. Once a remote seller exceeds a certain amount of sales into Texas (for example, a threshold based on yearly revenue), they may have to:
-      </p>
-      <ul>
-        <li>Register for a Texas sales tax permit</li>
-        <li>Collect Texas sales and use tax on orders shipped to Texas customers</li>
-        <li>File periodic sales tax returns and remit the tax</li>
-      </ul>
-
-      <h3>6.2 Local tax & remote sellers</h3>
-      <p>
-        Texas allows certain remote sellers to use a special “single local use tax rate” instead of calculating the exact local rate for every address. This is a simplifying option for qualifying remote sellers so they don’t have to track each local rate individually.
-      </p>
-
-      <div class="note">
-        If you sell into Texas from out of state (for example through an online store), talk with a tax professional or check directly with the Texas Comptroller to see whether you’ve crossed the economic nexus threshold and how you should handle local tax.
-      </div>
-    </section>
-
-    <section id="lookup">
-      <h2>7. How to look up the exact rate for your address</h2>
-      <p>
-        Because local sales tax changes from city to city (and even within some ZIP codes), it’s best to look up the precise rate for your location.
-      </p>
-      <p>
-        To find the exact combined rate for a location in Texas, you can:
-      </p>
-      <ul>
-        <li>Use the Texas Comptroller’s official online tax rate lookup tools</li>
-        <li>Check recent notices from your city or county about local sales tax changes</li>
-        <li>Use reputable third-party calculators that track current state and local rates</li>
-      </ul>
-      <p>
-        For official reporting, always rely on the Comptroller’s guidance and published rates.
-      </p>
-    </section>
-
-    <section id="faq">
-      <h2>8. Fast FAQ: Texas sales tax questions</h2>
-
-      <div class="faq-item">
-        <h3>Is there a Texas state income tax?</h3>
-        <p>
-          No. Texas does not have a state personal income tax. Instead, the state relies more heavily on sales tax and property tax for revenue.
-        </p>
-      </div>
-
-      <div class="faq-item">
-        <h3>What is the current Texas state sales tax rate?</h3>
-        <p>
-          The current statewide Texas sales and use tax rate is <strong>6.25%</strong>. Local jurisdictions can add up to an additional 2.00%, for a maximum combined rate of <strong>8.25%</strong>.
-        </p>
-      </div>
-
-      <div class="faq-item">
-        <h3>Why does the tax rate change from city to city?</h3>
-        <p>
-          Each local jurisdiction (cities, counties, transit authorities, and special-purpose districts) can choose to impose its own sales and use tax, within state limits. That’s why your combined rate can be 6.25% in one place and 8.25% in another.
-        </p>
-      </div>
-
-      <div class="faq-item">
-        <h3>Do online purchases get Texas sales tax?</h3>
-        <p>
-          Many online purchases shipped to Texas will include Texas sales tax, especially if the seller has a physical presence in Texas or meets the economic nexus threshold. Some marketplaces and large online retailers collect and remit Texas sales tax automatically.
-        </p>
-      </div>
-
-      <div class="faq-item">
-        <h3>How can I be sure I’m charging the right tax rate to my customers?</h3>
-        <p>
-          The safest approach is to:
-        </p>
-        <ul>
-          <li>Use the Texas Comptroller’s official tools to find your location’s rate</li>
-          <li>Keep your address and tax settings up to date in your point-of-sale or e-commerce system</li>
-          <li>Work with a tax professional if you have complex situations (multiple locations, online sales, large volume, etc.)</li>
-        </ul>
-      </div>
-    </section>
   </main>
 
   <footer>
     <p>
-      This site is an independent informational resource about Texas state sales tax. It does not provide legal, accounting, or tax advice. For official guidance or to confirm current rates, contact the Texas Comptroller of Public Accounts or a qualified tax professional.
+      Give him a call and he will ask for pics.
     </p>
   </footer>
 </body>
